<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/itemRootEditView"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            card_view:cardBackgroundColor="#F5F5F5"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="10dp">

            <RelativeLayout
                    android:id="@+id/rlAddCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cardNameView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/card_name_hint"
                        android:layout_alignParentTop="true"
                        android:textSize="24sp" android:layout_marginLeft="10dp" android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp" android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp" android:layout_marginBottom="10dp"/>

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/bankAccountView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/bank_account_hint"
                        android:layout_alignParentBottom="true"
                        android:ems="6" android:layout_marginLeft="10dp" android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp" android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp" android:layout_marginBottom="10dp" android:textSize="22sp"
                        android:maxLength="11"/>

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/expirationDateView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/expiration_date_hint"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:ems="3" android:layout_marginLeft="10dp" android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp" android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp" android:layout_marginBottom="10dp" android:textSize="22sp"
                        android:maxLength="5"/>

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cardNumberView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/card_number_hint"
                        android:layout_above="@id/bankAccountView"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textSize="24sp"
                        android:maxLength="19"/>

            </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddCard"
            android:layout_margin="25dp"
            android:layout_below="@id/itemRootEditView"
            android:layout_centerHorizontal="true"
            android:text="Done"
            android:layout_width="200dp"
            android:layout_height="50dp"/>

</RelativeLayout>
